fix(messages): added username to chatbox on mobile view, style changes

--- a/less/messenger.less
+++ b/less/messenger.less
@@ -7,14 +7,14 @@
 
 .column {
   height: 81.5vh;
+  border: 10px solid lighten(@secondary-color, 20%);
+  margin: 0.9em 0.5em 0em 0.5em;
+  border-radius: 10px;
 }
 
 //**********LEFT COLUMN**********
 .match-list {
   flex: 1;
-  margin: 0.5em;
-  border-radius: 10px;
-  border: 10px solid @secondary-color;
   background-color: fadeout(@primary-color, 30%);
   overflow-y: scroll;
   overflow-x: hidden;
@@ -45,41 +45,37 @@
 //**********RIGHT COLUMN**********
 .chatMessageBox {
   flex: 2;
-  margin: 0.5em;
-  border: 10px solid @secondary-color;
-  border-radius: 10px;
-}
-
-//chats
-.chatroom {
-  height: 75.3vh;
-  padding: 0.3vh 0.5vw;
-  border-bottom: solid black;
-  background-color: fadeout(@primary-color, 70%);
-  overflow-x: hidden;
-  overflow-y: auto;
-  white-space: nowrap;
-}
-
-//input text box
-.input-box {
-  display: flex;
-  align-items: center;
-  height: 6vh;
-  margin: 0vh 0.25vw 0.5vh 0.25vw;
-  input {
-    margin: 0;
-    flex: 7;
-    padding: 1vh;
-    border-radius: 10px;
-    margin-right: 5px;
+  .chatroom {
+    height: 75.3vh;
+    padding: 0.3vh 0.5vw;
+    border-bottom: solid black;
+    background-color: fadeout(@primary-color, 70%);
+    overflow-x: hidden;
+    overflow-y: auto;
+    white-space: nowrap;
   }
-  button {
-    flex: 1;
-    margin: 0;
+
+  //input text box
+  .input-box {
+    display: flex;
+    align-items: center;
+    height: 6vh;
+    margin: 0vh 0.25vw 0.5vh 0.25vw;
+    input {
+      margin: 0;
+      flex: 7;
+      padding: 1vh;
+      border-radius: 10px;
+      margin-right: 5px;
+    }
+    button {
+      flex: 1;
+      margin: 0;
+    }
   }
 }
 
+//single chat message
 .single-message {
   margin: 3px 0;
   display: flex;
@@ -128,19 +124,14 @@
 
 //back button to get back to match list
 #back {
+  display: flex;
+  align-items: center;
   position: fixed;
+  z-index: 10;
   @media (min-width: 981px) {
     display: none;
   }
 }
-
-// #back {
-//   display: none;
-//   @media (max-width: 980px) {
-//     display: block;
-//     position: absolute;
-//   }
-// }
 
 //make one or the other columns disappear on mobile ciew
 .mobile {
